syntax = "proto3";
package idas.endpoint;
import public "gogoproto/gogo.proto";
option go_package = "github.com/MicroOps-cn/idas/pkg/endpoint;endpoint";

message BaseListRequest{
  int64 page_size = 1[(gogoproto.jsontag)="pageSize,omitempty"];
  int64 current = 2;
  string keywords = 3;
}

message ErrorType {}


message BaseResponse{
  string trace_id = 1[(gogoproto.jsontag) = "traceId",(gogoproto.moretags)='valid:"required"'];
  bool success = 2[(gogoproto.jsontag) = "success",(gogoproto.moretags)='valid:"required"'];
  string error_code = 3[(gogoproto.jsontag)="errorCode,omitempty"];
  string error_message = 4[(gogoproto.jsontag)="errorMessage,omitempty"];
  ErrorType error = 5[(gogoproto.customtype) = "error",(gogoproto.jsontag) = "-",(gogoproto.nullable) = false];
}
message BaseTotalResponse{
  BaseResponse base_response = 1[(gogoproto.embed) = true, (gogoproto.nullable) = false,(gogoproto.jsontag) = ",omitempty"];
  int64 total = 7[(gogoproto.jsontag) = "total"];
}

message BaseListResponse{
  BaseTotalResponse base_total_response = 1[(gogoproto.embed) = true, (gogoproto.nullable) = false,(gogoproto.jsontag) = ",omitempty"];
  int64 current = 2[(gogoproto.jsontag) = "current"];
  int64 page_size = 3[(gogoproto.jsontag) = "pageSize"];
}
